correction trad, correction mission, release saloren, patch event MJ

--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -20,6 +20,16 @@ custom_institution_growth_event.1.b:0 "Invest resources in the growth of the loc
 custom_institution_growth_event.1.c:0 "I'm a chad, I will develop the institution myself."
 institution_growth_boost_modifier:0 "Intitution growth boost"
 institution_growth_boost_modifier2:0 "Intitution growth boost 2"
+custom_celmador_nimscodd_issue.1.t:0 "The Oddcodd Dilemma"
+custom_celmador_nimscodd_issue.1.d:0 "The island of Oddcodd has long been a point of contention between Nimscodd and Celmador. Celmador now demands control of the island, offering gold and development aid in return. Our advisors are divided: some argue that peace and prosperity are worth more than a barren rock, while others insist we must never yield an inch of Nimscodd soil."
+custom_celmador_nimscodd_issue.1.a:0 "Accept Celmador's offer and cede Oddcodd."
+custom_celmador_nimscodd_issue.1.b:0 "To arms! We will defend Oddcodd!"
+custom_celmador_nimscodd_issue.2.t:0 "Oddcodd Secured"
+custom_celmador_nimscodd_issue.2.d:0 "With Oddcodd peacefully transferred to Celmador, our merchants and settlers rush to integrate the island into our trade networks. Local communities are reshaped as new opportunities arise across the Storm Isles."
+custom_celmador_nimscodd_issue.2.a:0 "Invest in the island and the Storm Isles."
+custom_celmador_nimscodd_issue.3.t:0 "They refuse its war time"
+custom_celmador_nimscodd_issue.3.d:0 "Nimscodd Refuse our proposal! We will take this Island by force!"
+custom_celmador_nimscodd_issue.3.a:0 "WAAAAAAAAR"
 
 select_edict_for_all_province_title:0 "Select Edict for All Provinces"
 select_edict_for_all_province_desc:0 "This decision will allow you to select an edict to be applied to all provinces in your country. Nothing is more efficient than enacting a decree to bypass the congress."
