--- a/3362815204/localisation/1me_text_l_french.yml
+++ b/3362815204/localisation/1me_text_l_french.yml
@@ -20,6 +20,16 @@ custom_institution_growth_event.1.b:0 "Investir des ressources dans la croissanc
 custom_institution_growth_event.1.c:0 "Je suis un boss, je vais développer l'institution moi-même."
 institution_growth_boost_modifier:0 "Boost de croissance d'institution"
 institution_growth_boost_modifier2:0 "Boost de croissance d'institution 2"
+custom_celmador_nimscodd_issue.1.t:0 "Le Dilemme d’Oddcodd"
+custom_celmador_nimscodd_issue.1.d:0 "L’île d’Oddcodd est depuis longtemps un sujet de discorde entre Nimscodd et Celmador. Ce dernier exige désormais son contrôle, offrant de l’or et une aide au développement en échange. Nos conseillers sont divisés : certains estiment que la paix et la prospérité valent mieux qu’un simple rocher, tandis que d’autres refusent catégoriquement de céder le moindre pouce de terre nimscoddaise."
+custom_celmador_nimscodd_issue.1.a:0 "Accepter l’offre de Celmador et céder Oddcodd."
+custom_celmador_nimscodd_issue.1.b:0 "Aux armes ! Nous défendrons Oddcodd !"
+custom_celmador_nimscodd_issue.2.t:0 "Oddcodd Sécurisée"
+custom_celmador_nimscodd_issue.2.d:0 "Oddcodd a été transférée pacifiquement à Celmador. Nos marchands et colons s’empressent d’intégrer l’île à nos réseaux commerciaux, tandis que les communautés locales évoluent avec de nouvelles opportunités dans les Îles des Tempêtes."
+custom_celmador_nimscodd_issue.2.a:0 "Investir dans l’île et les Îles des Tempêtes."
+custom_celmador_nimscodd_issue.3.t:0 "Ils ont refuser c'est la guerre"
+custom_celmador_nimscodd_issue.3.d:0 "Nimscodd a refuser notre demande! Nous allons prendre cette île par la force!"
+custom_celmador_nimscodd_issue.3.a:0 "GUEEEEEEEEEEEEERRE"
 
 select_edict_for_all_province_title:0 "Sélectionner un Édit pour Toutes les Provinces"
 select_edict_for_all_province_desc:0 "Cette décision vous permettra de sélectionner un édit à appliquer à toutes les provinces de votre pays. Rien n'est plus efficace que de promulguer un décret pour contourner le congrès."
