--- a/3362815204/localisation/Flavour_Corinsfield_H35_l_french.yml
+++ b/3362815204/localisation/Flavour_Corinsfield_H35_l_french.yml
@@ -495,7 +495,7 @@ flavour_corinsfield.13.a:0 "Cela prendra du temps."
  estate_church_corinsfield_society:0 "§OSociété Respectable§!"
  estate_church_corinsfield_society_desc:0 ""
  h35_upstanding_society:0 "Société Respectable"
- h35_clergy_land_bonus:0 "Les §YDroits Fonciers [Root.GetClergyName]§! fourniront maintenant une §G100§! Capacité de Gouvernance additionnelle ainsi qu'un §G-10%§! Modificateur de Temps de Recrutement."
+ h35_clergy_land_bonus:0 "Les §YDroits Fonciers clergé§! fourniront maintenant une §G100§! Capacité de Gouvernance additionnelle ainsi qu'un §G-10%§! Modificateur de Temps de Recrutement."
  estate_church_corinsfield_church_raisings:0 "Collectes Charitables de Temple"
  estate_church_corinsfield_church_raisings_desc:0 "Quand vient le temps pour les villes de s'étendre, la communauté entière se rassemble pour leur travail. Ceci est spécialement vrai pour ériger nouveaux temples. Les gens fidèles de Corinsfield reconnaissent l'immense valeur spirituelle dans les temples de Corin, et s'assureront souvent qu'ils sont construits avant tout autre bâtiment. Les dégâts lourds seront parfois réparés en même moins d'un jour."
 #monument
