--- a/3362815204/localisation/anb_estates_l_french.yml
+++ b/3362815204/localisation/anb_estates_l_french.yml
@@ -147,7 +147,7 @@
  estate_mages_organization_guilds:0 "Organisation Mage : Guildes"
  estate_mages_organization_guilds_desc:0 "L'adhésion et l'éducation magiques appartiennent à diverses guildes de toutes tailles qui fonctionnent avec une autonomie relative."
  estate_mages_organization_religious:0 "Organisation Mage : Religieuse"
- estate_mages_organization_religious_desc:0 "Les [Root.GetClergyName] supervisent l'artisanat magique dans ce pays."
+ estate_mages_organization_religious_desc:0 "Les clergé supervisent l'artisanat magique dans ce pays."
  estate_mages_organization_orda_aldresia:0 "Organisation Mage : Orda Aldresia"
  estate_mages_organization_orda_aldresia_desc:0 "Les mages de notre pays sont organisés sous la prestigieuse Orda Aldresia. Fondée après la Croisade Aldrésienne par un disciple inconnu du héros Aldresia qui fut mortellement blessé en tuant Canrec le Souilleur, l'Empereur Marion conclut un pacte avec l'Ordre en 1221. Prêtant un serment ancien, l'Orda Aldresia s'est engagée à protéger l'Empire jusqu'à leur dernier souffle."
  estate_mages_battlemage_academies:0 "Académies de Mages de Bataille"
