--- a/3362815204/localisation/anb_mage_organization_l_french.yml
+++ b/3362815204/localisation/anb_mage_organization_l_french.yml
@@ -4,8 +4,8 @@
  estate_organization.1.a:0 "Accueillir les Guildes Magiques."
  estate_organization.1.b:0 "Centraliser les Mages sous l'autorité de l'État."
  estate_organization.1.c:0 "Inviter le Magistère."
- estate_organization.1.e:0 "Le [Root.GetClergyName] supervisera les Mages."
- estate_organization.1.f:0 "Le [Root.GetClergyName] fera respecter le Statut Jahérien."
+ estate_organization.1.e:0 "Le clergé supervisera les Mages."
+ estate_organization.1.f:0 "Le clergé fera respecter le Statut Jahérien."
  estate_organization.1.dd:0 "Les Mages sont bannis de ces terres !"
  estate_organization.2.t:0 "Question des Droits Nobiliaires"
  estate_organization.2.d:0 "Suite à la récente expulsion des mages de notre royaume, la noblesse dirigeante s'est enquise de ce qu'il adviendrait des privilèges de l'Élite Magique précédemment dominante ?"
