--- a/3362815204/localisation/anb_patricians_estate_l_french.yml
+++ b/3362815204/localisation/anb_patricians_estate_l_french.yml
@@ -97,7 +97,7 @@
  estate_castonath_patricians_indebted_to_patricians_effect_tooltip:0 "Prendre §Y5§! prêts de cinq ans à §Y1.0%§! d'intérêt. Le privilège sera retiré automatiquement quand remboursé."
 
  estate_castonath_patricians_recognize_beliefs:0 "Reconnaître les Croyances Patriciennes"
- estate_castonath_patricians_recognize_beliefs_desc:0 "Les Patriciens de Castonath sont un groupe têtu, et il y en a beaucoup parmi eux qui s'accrochent à des croyances différentes de ce que notre [Root.GetClergyName] prêche. Ils demandent que notre [Root.Monarch.GetTitle] reconnaisse officiellement ces croyances au sein de notre [Root.GovernmentName]."
+ estate_castonath_patricians_recognize_beliefs_desc:0 "Les Patriciens de Castonath sont un groupe têtu, et il y en a beaucoup parmi eux qui s'accrochent à des croyances différentes de ce que notre clergé prêche. Ils demandent que notre [Root.Monarch.GetTitle] reconnaisse officiellement ces croyances au sein de notre [Root.GovernmentName]."
  
 # Agendas 
  local_patricians_displeased:0 "Patriciens Locaux Mécontents"
