--- a/3362815204/localisation/anb_religions_l_french.yml
+++ b/3362815204/localisation/anb_religions_l_french.yml
@@ -2887,11 +2887,11 @@ desc_accretive_path_temples_for_warriors_major_improved:0 "Placeholder"
  desc_bd_law_of_forced_malleability:0 "Les liens du monde mortel ne nous entraveront plus. Travaillons sans limites, sans poids ou hauteur ou haut ou bas. La réalité plie à ma volonté, et vous, mes fidèles, forgerez mon empire là où elle se déforme."
  forbidden_breach:0 "§WCommandement de Brèche Interdite§!"
  bd_command_of_forbidden_breach_1_effect_tt:0 "Gagne §G1§! Mercantilisme."
- bd_command_of_forbidden_breach_1_e_effect_tt:0 "Gagne §G1§! Mercantilisme et §G5§! de Loyauté §Y[This.GetBurghersName]§!."
+ bd_command_of_forbidden_breach_1_e_effect_tt:0 "Gagne §G1§! Mercantilisme et §G5§! de Loyauté §Y[This.GetBourgeois]§!."
  bd_command_of_forbidden_breach_2_effect_tt:0 "Gagne §G2§! Mercantilisme."
- bd_command_of_forbidden_breach_2_e_effect_tt:0 "Gagne §G2§! Mercantilisme et §G10§! de Loyauté §Y[This.GetBurghersName]§!."
+ bd_command_of_forbidden_breach_2_e_effect_tt:0 "Gagne §G2§! Mercantilisme et §G10§! de Loyauté §Y[This.GetBourgeois]§!."
  bd_command_of_forbidden_breach_4_effect_tt:0 "Gagne §G4§! Mercantilisme."
- bd_command_of_forbidden_breach_4_e_effect_tt:0 "Gagne §G4§! Mercantilisme et §G20§! de Loyauté §Y[This.GetBurghersName]§!."
+ bd_command_of_forbidden_breach_4_e_effect_tt:0 "Gagne §G4§! Mercantilisme et §G20§! de Loyauté §Y[This.GetBourgeois]§!."
  bd_command_of_forbidden_breach_effect_tt:0 "Efficacité d'Embargo §G50%§!, Puissance Commerciale Intérieure : §G20%§!"
  desc_forbidden_breach:0 "Les oiseaux sont mes oreilles, le soleil est mon œil, les pierres me disent tout ce dont elles sont témoins. Que nul qui cherche à profiter à mon détriment ne foule la terre qui m'est loyale, de peur que la poussière d'Halann elle-même ne se dresse contre eux.\n\nGagne un modificateur qui accorde Efficacité d'Embargo §G50%§! et Puissance Commerciale Intérieure : §G20%§! pendant §Y10§! ans (et réduit le gain de pouvoir), en plus de gagner Mercantilisme et loyauté des Bourgeois selon votre Maîtrise d'§WAbjuration§! et votre §YAbsolutisme§!£icon_absolutism£."
  bd_command_of_forbidden_breach:0 "Commandement de Brèche Interdite"
