--- a/3362815204/localisation/anb_taychend_l_french.yml
+++ b/3362815204/localisation/anb_taychend_l_french.yml
@@ -257,7 +257,7 @@ l_french:
  taychendi_vassal_prophecy_badmod: "Les Rumeurs Abondent"
 
  taychendi.17.t:0 "Tentative d'Assassinat sur notre Dirigeant !"
- taychendi.17.d:0 "Horreur ! Un lâche coupe-jarret a créé le chaos dans les chambres de la couronne !\nLa tentative sur la vie du [Root.Monarch.GetTitle] a heureusement été déjouée et le félon tué, mais c'est déjà la deuxième fois ce mois-ci que [Root.Monarch.GetName] est la cible de tueurs à gages, et beaucoup craignent que ce ne soit pas la dernière.\n\n\"Les dieux veillent à ce que si la première moitié de la prophétie ne reste pas vraie, la seconde le sera !\" dit le [Root.GetClergyName]. \"[Root.Monarch.GetSheHe] va se faire tuer\" pleure la famille de [Root.Monarch.GetHerHis]."
+ taychendi.17.d:0 "Horreur ! Un lâche coupe-jarret a créé le chaos dans les chambres de la couronne !\nLa tentative sur la vie du [Root.Monarch.GetTitle] a heureusement été déjouée et le félon tué, mais c'est déjà la deuxième fois ce mois-ci que [Root.Monarch.GetName] est la cible de tueurs à gages, et beaucoup craignent que ce ne soit pas la dernière.\n\n\"Les dieux veillent à ce que si la première moitié de la prophétie ne reste pas vraie, la seconde le sera !\" dit le clergé. \"[Root.Monarch.GetSheHe] va se faire tuer\" pleure la famille de [Root.Monarch.GetHerHis]."
  taychendi.17.a:0 "\"D'accord !\" crie le [Root.Monarch.GetTitle] \"Arrêtez l'annexion !\""
  taychendi.17.b:0 "\"Maudits soient l'oracle et les dieux aussi ! Continuez !\" beugle [Root.Monarch.GetName]."
 
@@ -267,7 +267,7 @@ l_french:
  taychendi_vassal_prophecy_goodmod:0 "A défié la prophétie"
 
  taychendi.19.t:0 "La Prophétie s'Accomplit"
- taychendi.19.d:0 "Comme cela arrive presque toujours, les avertissements de l'oracle se sont réalisés. Le [Root.GetClergyName] proclame pompeusement la force des dieux et la sagesse de ceux qui les suivent.\nEt tout le monde est d'accord avec eux, car combattre le destin et perdre ne vous apporte que pitié et dérision."
+ taychendi.19.d:0 "Comme cela arrive presque toujours, les avertissements de l'oracle se sont réalisés. Le clergé proclame pompeusement la force des dieux et la sagesse de ceux qui les suivent.\nEt tout le monde est d'accord avec eux, car combattre le destin et perdre ne vous apporte que pitié et dérision."
  taychendi.19.a:0 "Mais seul celui qui peut prendre des risques peut atteindre la grandeur."
 
  taychendi.20.t: "Quelle est la Teinte de Taychend ?"
