--- a/3362815204/localisation/cossacks_l_french.yml
+++ b/3362815204/localisation/cossacks_l_french.yml
@@ -1506,4 +1506,50 @@
  raiding_parties_modifier:0 "Raids"
  desc_raiding_parties_modifier:0 "Nous avons rassemblé des troupes pour mener des raids et faire des steppes un véritable enfer pour nos ennemis. Ils contribuent grandement à accroître nos capacités de manœuvre et notre puissance sur ces territoires."
  COSSACKS_DESC:2 "Accorder des privilèges spécifiques à l'ordre des §Ycosaques§! permet de recruter dans nos armées leurs meilleurs cavaliers, qui font plus de dégâts que les unités de cavalerie habituelles."
-
+ string_nobles_FR:0 "nobles" # [LocEditor:CustomLanguageKey]
+ string_nobles_FR_this:0 "[This.GetNobles]" # [LocEditor:CustomLanguageKey]
+ string_church_FR:0 "clercs" # [LocEditor:CustomLanguageKey]
+ string_church_FR_this:0 "[This.GetClercs]" # [LocEditor:CustomLanguageKey]
+ string_burghers_FR:0 "bourgeois" # [LocEditor:CustomLanguageKey]
+ string_burghers_FR_this:0 "[This.GetBourgeois]" # [LocEditor:CustomLanguageKey]
+ string_cossacks_FR:0 "cosaques" # [LocEditor:CustomLanguageKey]
+ string_cossacks_FR_this:0 "[This.GetCosaques]" # [LocEditor:CustomLanguageKey]
+ string_dhimmi_FR:0 "dhimmî" # [LocEditor:CustomLanguageKey]
+ string_dhimmi_FR_this:0 "[This.GetDhimmi]" # [LocEditor:CustomLanguageKey]
+ string_nomadic_tribes_FR:0 "tribus" # [LocEditor:CustomLanguageKey]
+ string_nomadic_tribes_FR_this:0 "[This.GetTribus]" # [LocEditor:CustomLanguageKey]
+ string_beys_FR:0 "ümerâ" # [LocEditor:CustomLanguageKey]
+ string_boyars_FR:0 "boyards" # [LocEditor:CustomLanguageKey]
+ string_szlachta_FR:0 "szlachcice" # [LocEditor:CustomLanguageKey]
+ string_amirs_FR:0 "émirs" # [LocEditor:CustomLanguageKey]
+ string_ulema_FR:0 "oulémas" # [LocEditor:CustomLanguageKey]
+ string_mansabdars_FR:0 "mansabdârs" # [LocEditor:CustomLanguageKey]
+ string_qinwang_FR:0 "qinwang" # [LocEditor:CustomLanguageKey]
+ string_planters_FR:0 "planteurs" # [LocEditor:CustomLanguageKey]
+ string_bourgeoisie_FR:0 "bourgeois" # [LocEditor:CustomLanguageKey]
+ string_brahmins_FR:0 "brahmanes" # [LocEditor:CustomLanguageKey]
+ string_brahmins_FR_this:0 "[This.GetBrahmanes]" # [LocEditor:CustomLanguageKey]
+ string_pastors_FR:0 "pasteurs" # [LocEditor:CustomLanguageKey]
+ string_popes_FR:0 "popes" # [LocEditor:CustomLanguageKey]
+ string_shamans_FR:0 "chamans" # [LocEditor:CustomLanguageKey]
+ string_gurus_FR:0 "gourous" # [LocEditor:CustomLanguageKey]
+ string_medicine_men_FR:0 "hommes-médecine" # [LocEditor:CustomLanguageKey]
+ string_godar_FR:0 "goðar" # [LocEditor:CustomLanguageKey]
+ string_rabbis_FR:0 "rabbins" # [LocEditor:CustomLanguageKey]
+ string_mobeds_FR:0 "mobads" # [LocEditor:CustomLanguageKey]
+ string_kannushi_FR:0 "kannushi" # [LocEditor:CustomLanguageKey]
+ string_panacas_FR:0 "prêtres" # [LocEditor:CustomLanguageKey]
+ string_merchant_guilds_FR:0 "marchands" # [LocEditor:CustomLanguageKey]
+ string_monasteries_FR:0 "ordres monastiques" # [LocEditor:CustomLanguageKey]
+ string_tetecuhtin_FR:0 "têtêuctin" # [LocEditor:CustomLanguageKey]
+ string_andriana_FR:0 "andriana" # [LocEditor:CustomLanguageKey]
+ string_timawa_FR:0 "timawa" # [LocEditor:CustomLanguageKey]
+ string_babaylanes_FR:0 "babaylanes" # [LocEditor:CustomLanguageKey]
+ string_tlamacazqueh_FR:0 "tlamacazqueh" # [LocEditor:CustomLanguageKey]
+ string_kshatriyas_FR:0 "kshatriyas" # [LocEditor:CustomLanguageKey]
+ string_nayaks_FR:0 "nayaks" # [LocEditor:CustomLanguageKey]
+ string_samantas_FR:0 "samantas" # [LocEditor:CustomLanguageKey]
+ string_bushi_FR:0 "bushi" # [LocEditor:CustomLanguageKey]
+ string_warriors_FR:0 "guerriers" # [LocEditor:CustomLanguageKey]
+ string_mani_FR:0 "awene" # [LocEditor:CustomLanguageKey]
+ string_pochteca_FR:0 "pôchtêcah" # [LocEditor:CustomLanguageKey]
