--- a/3362815204/localisation/emperor_content_l_french.yml
+++ b/3362815204/localisation/emperor_content_l_french.yml
@@ -1448,17 +1448,17 @@
  NOT_ESCANNI_ADVENTURER: "[Root.GetName] ne doit pas être une Compagnie d'Aventuriers Escannienne" #Anbennar 
  NOT_ESCANNI_ADVENTURER_FROM: "[From.GetName] ne doit pas être une Compagnie d'Aventuriers Escannienne" #Anbennar 
  
- country_estate_nobles_name:0 "[This.GetNobilityName]"
- country_estate_burghers_name:0 "[This.GetBurghersName]"
- country_estate_church_name:0 "[This.GetClergyName]"
- country_estate_nomadic_tribes_name:0 "[This.GetTribesName]"
- country_estate_dhimmi_name:0 "[This.GetDhimmiName]"
+ country_estate_nobles_name:0 "[This.GetNobles]"
+ country_estate_burghers_name:0 "[This.GetBourgeois]"
+ country_estate_church_name:0 "[This.GetClercs]"
+ country_estate_nomadic_tribes_name:0 "[This.GetTribus]"
+ country_estate_dhimmi_name:0 "[This.GetDhimmi]"
  country_estate_cossacks_name:0 "Orachav"
- country_estate_vaisyas_name:0 "[This.GetVaishyasName]"
- country_estate_brahmins_name:0 "[This.GetBrahminsName]"
- country_estate_jains_name:0 "[This.GetJainsName]"
- country_estate_rajput_name:0 "[This.GetRajputsName]"
- country_estate_maratha_name:0 "[This.GetMarathasName]"
+ country_estate_vaisyas_name:0 "[This.GetVaishyas]"
+ country_estate_brahmins_name:0 "[This.GetBrahmanes]"
+ country_estate_jains_name:0 "[This.GetJains]"
+ country_estate_rajput_name:0 "[This.GetRajpoutes]"
+ country_estate_maratha_name:0 "[This.GetMarathes]"
  #Anbennar
  country_estate_eunuchs_anb_name:0 "[This.GetEunuchsName]"
 
@@ -1628,16 +1628,16 @@
  judaism_string:0 "Judaïsme"
  zoroastrianism_string:0 "Zoroastrisme"
  EST_VAL_CORRUPT_CONNECTIONS:0 "Connexions Corrompues : $VAL|Y$§Y%§!"
- this_brahmins:0 "[This.GetBrahminsName]"
- this_dhimmi:0 "[This.GetDhimmiName]"
- this_clergy:0 "[This.GetClergyName]"
- this_vaisyas:0 "[This.GetVaishyasName]"
- this_jains:0 "[This.GetJainsName]"
- this_burghers:0 "[This.GetBurghersName]"
- this_rajputs:0 "[This.GetRajputsName]"
- this_marathas:0 "[This.GetMarathasName]"
- this_nobles:0 "[This.GetNobilityName]"
- this_nomadic_tribes:0 "[This.GetTribesName]"
+ this_brahmins:0 "[This.GetBrahmanes]"
+ this_dhimmi:0 "[This.GetDhimmi]"
+ this_clergy:0 "[This.GetClercs]"
+ this_vaisyas:0 "[This.GetVaishyas]"
+ this_jains:0 "[This.GetJains]"
+ this_burghers:0 "[This.GetBourgeois]"
+ this_rajputs:0 "[This.GetRajpoutes]"
+ this_marathas:0 "[This.GetMarathes]"
+ this_nobles:0 "[This.GetNobles]"
+ this_nomadic_tribes:0 "[This.GetTribus]"
  fallback_string_nobility:0 "noblesse"
  EST_VAL_ACCEPTED_POPE_DEMANDS:0 "S'est Incliné devant les Exigences du Rectorat : $VAL|Y$§Y%§!"
  insult_german_humor:0 "On dit que l'humour allemand n'est pas matière à rire."
@@ -3456,3 +3456,108 @@
  
  #Anbennar pour la localisation manquante de la vanilla, peut être retiré quand la vanilla est corrigée
  reichsreform_province:0 "Réforme Impériale"
+
+# === [LocEditor:OrphanedKeys] Keys that do not exist in English ===
+ string_BROTHER_FR:0 "frère" # [LocEditor:CustomLanguageKey]
+ string_LORD_HIGH_ADMIRAL_FR:0 "grand amiral" # [LocEditor:CustomLanguageKey]
+ string_SUPREME_ADMIRAL_FR:0 "amiral suprême" # [LocEditor:CustomLanguageKey]
+ string_FIELD_MARSHAL_FR:0 "maréchal" # [LocEditor:CustomLanguageKey]
+ string_ARCHPIRATE_FR:0 "archipirate" # [LocEditor:CustomLanguageKey]
+ string_MARSHAL_fem_FR:0 "maréchale" # [LocEditor:CustomLanguageKey]
+ string_SERENE_MARSHAL_fem_FR:0 "maréchale sérénissime" # [LocEditor:CustomLanguageKey]
+ string_MOST_SERNE_MARSHAL_fem_FR:0 "très sérénissime maréchale" # [LocEditor:CustomLanguageKey]
+ string_KRONPRINZ_FR:0 "Kronprinz" # [LocEditor:CustomLanguageKey]
+ string_KRONPRINZEN_FR:0 "Kronprinzessin" # [LocEditor:CustomLanguageKey]
+ string_FIELD_MARSHAL_fem_FR:0 "maréchale" # [LocEditor:CustomLanguageKey]
+ string_LORD_HIGH_ADMIRAL_fem_FR:0 "grande amirale" # [LocEditor:CustomLanguageKey]
+ string_SUPREME_ADMIRAL_fem_FR:0 "amirale suprême" # [LocEditor:CustomLanguageKey]
+ string_SISTER_FR:0 "sœur" # [LocEditor:CustomLanguageKey]
+ string_FIRST_RANGER_fem_FR:0 "dame-chevalier" # [LocEditor:CustomLanguageKey]
+ string_MAGISTER_HOCHMEISTER_fem_FR:0 "grande Hochmeisterin" # [LocEditor:CustomLanguageKey]
+ string_DEUTSCHMEISTER_fem_FR:0 "magistra Germaniæ" # [LocEditor:CustomLanguageKey]
+ string_COMMANDER_EMPRESS_FR:0 "impératrice-commanderesse" # [LocEditor:CustomLanguageKey]
+ EventAdvisorTitleMinus.A:0 "[This.GetAdm]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorTitleMinus.D:0 "[This.GetDip]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorTitleMinus.M:0 "[This.GetMil]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorHerHimCap.A:0 "[This.GetLuiElleAdmCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorHerHimCap.D:0 "[This.GetLuiElleDipCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorHerHimCap.M:0 "[This.GetLuiElleMilCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorQueluiQuelleCap.A:0 "[This.GetQueluiQuelleAdmCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorQueluiQuelleCap.D:0 "[This.GetQueluiQuelleDipCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorQueluiQuelleCap.M:0 "[This.GetQueluiQuelleMilCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorQueluiQuelle.A:0 "[This.GetQueluiQuelleAdm]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorQueluiQuelle.D:0 "[This.GetQueluiQuelleDip]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorQueluiQuelle.M:0 "[This.GetQueluiQuelleMil]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorXE.A:0 "[This.GetXEAdm]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorXE.D:0 "[This.GetXEDip]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorXE.M:0 "[This.GetXEMil]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorLeLaFCap.A:0 "[This.GetLeLaFAdmCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorLeLaFCap.D:0 "[This.GetLeLaFDipCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorLeLaFCap.M:0 "[This.GetLeLaFMilCap]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorLeLaF.A:0 "[This.GetLeLaFAdm]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorLeLaF.D:0 "[This.GetLeLaFDip]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorLeLaF.M:0 "[This.GetLeLaFMil]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorElElle.A:0 "[This.GetElElleFAdm]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorElElle.D:0 "[This.GetElElleFDip]" # [LocEditor:CustomLanguageKey]
+ EventAdvisorElElle.M:0 "[This.GetElElleFMil]" # [LocEditor:CustomLanguageKey]
+ GetEventAdvisorManWoman.A:0 "[This.Adm_Advisor.GetWomanMan]" # [LocEditor:CustomLanguageKey]
+ GetEventAdvisorManWoman.D:0 "[This.Dip_Advisor.GetWomanMan]" # [LocEditor:CustomLanguageKey]
+ GetEventAdvisorManWoman.M:0 "[This.Mil_Advisor.GetWomanMan]" # [LocEditor:CustomLanguageKey]
+ GetEventAdvisorErEre.A:0 "[This.GetErEreAdm]" # [LocEditor:CustomLanguageKey]
+ GetEventAdvisorErEre.D:0 "[This.GetErEreDip]" # [LocEditor:CustomLanguageKey]
+ GetEventAdvisorErEre.M:0 "[This.GetErEreMil]" # [LocEditor:CustomLanguageKey]
+ string_junkers_FR:0 "junkers" # [LocEditor:CustomLanguageKey]
+ string_MARSHAL_FR:0 "maréchal" # [LocEditor:CustomLanguageKey]
+ string_SERENE_MARSHAL_FR:0 "maréchal sérénissime" # [LocEditor:CustomLanguageKey]
+ string_MOST_SERNE_MARSHAL_FR:0 "très sérénissime maréchal" # [LocEditor:CustomLanguageKey]
+ string_COUNT_FR:0 "comte" # [LocEditor:CustomLanguageKey]
+ string_ELECTOR_PALATINE_FR:0 "électeur palatin" # [LocEditor:CustomLanguageKey]
+ string_ELECTRESS_PALATINE_FR:0 "électrice palatine" # [LocEditor:CustomLanguageKey]
+ string_COUNT_PALATINE_FR:0 "comte palatin" # [LocEditor:CustomLanguageKey]
+ string_KING_PALATINE_FR:0 "roi palatin" # [LocEditor:CustomLanguageKey]
+ string_COUNTESS_PALATINE_FR:0 "comtesse palatine" # [LocEditor:CustomLanguageKey]
+ string_QUEEN_PALATINE_FR:0 "reine palatine" # [LocEditor:CustomLanguageKey]
+ austrian_archduchy_desc:0 "S'il est organisé à la manière d'un État féodal, l'archiduché d'Autriche a une longueur d'avance sur tous les autres en Europe. De fait, l'expérience acquise en gouvernant leurs dépendances – qu'il s'agisse du Tyrol, de la Styrie, de la Hongrie ou de la Bohême – et en concluant des générations d'alliances dynastiques profitables a permis aux archiducs de développer un système administratif extrêmement performant, capable de gouverner leurs possessions et de préserver leur unité." # [LocEditor:CustomLanguageKey]
+ string_CONSUL_ELECTOR_FR:0 "consul-électeur" # [LocEditor:CustomLanguageKey]
+ string_GRAND_CONSUL_ELECTOR_FR:0 "grand consul-électeur" # [LocEditor:CustomLanguageKey]
+ string_GREAT_CONSUL_ELECTOR_FR:0 "consul-électeur suprême" # [LocEditor:CustomLanguageKey]
+ string_CONSULESS_ELECTOR_FR:0 "consule-électrice" # [LocEditor:CustomLanguageKey]
+ string_GRAND_CONSULESS_ELECTOR_FR:0 "grande consule-électrice" # [LocEditor:CustomLanguageKey]
+ string_GREAT_CONSULESS_ELECTOR_FR:0 "consule-électrice suprême" # [LocEditor:CustomLanguageKey]
+ string_KAISER_FR:0 "Kaiser" # [LocEditor:CustomLanguageKey]
+ string_KAISERIN_FR:0 "Kaiserin" # [LocEditor:CustomLanguageKey]
+ string_slave:0 "des esclaves" # [LocEditor:CustomLanguageKey]
+ string_tobacco:0 "du tabac" # [LocEditor:CustomLanguageKey]
+ string_wine:0 "du vin" # [LocEditor:CustomLanguageKey]
+ string_salt:0 "du sel" # [LocEditor:CustomLanguageKey]
+ string_cotton:0 "du coton" # [LocEditor:CustomLanguageKey]
+ string_tea:0 "du thé" # [LocEditor:CustomLanguageKey]
+ string_natural_dyes:0 "des teintures" # [LocEditor:CustomLanguageKey]
+ string_cocoa:0 "du cacao" # [LocEditor:CustomLanguageKey]
+ string_coffee:0 "du café" # [LocEditor:CustomLanguageKey]
+ string_sugar:0 "du sucre" # [LocEditor:CustomLanguageKey]
+ string_MONSHU_FR:0 "monshu" # [LocEditor:CustomLanguageKey]
+ string_HIGH_MONSHU_FR:0 "monshu-shôgun" # [LocEditor:CustomLanguageKey]
+ string_HIGH_MONSHUESS_FR:0 "monshu-shôgunesse" # [LocEditor:CustomLanguageKey]
+ string_SHINRAN_FR:0 "shinran" # [LocEditor:CustomLanguageKey]
+ string_FIRST_RANGER_FR:0 "seigneur-chevalier" # [LocEditor:CustomLanguageKey]
+ string_LORD_COMMANDER_FR:0 "seigneur-commandeur" # [LocEditor:CustomLanguageKey]
+ string_LADY_COMMANDER_FR:0 "dame-commanderesse" # [LocEditor:CustomLanguageKey]
+ string_KNIGHT_KING_FR:0 "roi-chevalier" # [LocEditor:CustomLanguageKey]
+ string_KNIGHT_QUEEN_FR:0 "reine-chevalier" # [LocEditor:CustomLanguageKey]
+ string_MAGISTER_HOCHMEISTER_FR:0 "grand Hochmeister" # [LocEditor:CustomLanguageKey]
+ string_DEUTSCHMEISTER_FR:0 "Magister Germaniæ" # [LocEditor:CustomLanguageKey]
+ string_COMMANDER_EMPEROR_FR:0 "empereur-commandeur" # [LocEditor:CustomLanguageKey]
+ string_TRAPPIST_FR:0 "trappiste" # [LocEditor:CustomLanguageKey]
+ string_TRAPPISTINE_FR:0 "trappistine" # [LocEditor:CustomLanguageKey]
+ string_ARCH_TRAPPIST_FR:0 "prieur trappiste" # [LocEditor:CustomLanguageKey]
+ string_ARCH_TRAPPISTINE_FR:0 "prieure trappistine" # [LocEditor:CustomLanguageKey]
+ string_BREWMASTER_FR:0 "maître-brasseur" # [LocEditor:CustomLanguageKey]
+ string_BREWMISTRESS_FR:0 "maîtresse-brasseuse" # [LocEditor:CustomLanguageKey]
+ string_HERCEG_FR:0 "prince" # [LocEditor:CustomLanguageKey]
+ string_PRINCE_HERCEG_FR:0 "duc" # [LocEditor:CustomLanguageKey]
+ string_HERCEGI_FR:0 "princesse" # [LocEditor:CustomLanguageKey]
+ string_PRINCESS_HERCEGI_FR:0 "duchesse" # [LocEditor:CustomLanguageKey]
+ string_CALIPH_FR:0 "calife" # [LocEditor:CustomLanguageKey]
+ string_CALIPHA_FR:0 "califesse" # [LocEditor:CustomLanguageKey]
+ militant_order_of_saint_joan_tt:0 "Jeanne d'Arc doit avoir été canonisée et l'ordre de Sainte-Jeanne fondé à [184.GetCapitalName]." # [LocEditor:CustomLanguageKey]
