--- a/3362815204/localisation/emperor_l_french.yml
+++ b/3362815204/localisation/emperor_l_french.yml
@@ -694,20 +694,20 @@
  ESTATES_SUMMON_THE_DIET_DESC:0 "Convoquera la Diète pour définir un §YProgramme§!"
  estate_privileges_and_agendas_events.3.name:0 "Le Programme de la Diète"
  estate_privileges_and_agendas_events.3.desc:1 "Les États de [Root.GetName] ont proposé des programmes pour la Diète convoquée. Favoriser l'un des États ici pourrait avoir de grands avantages à long terme.\n\n[Root.GetCachedAgendasFlavorText]"
- estate_privileges_and_agendas_events.3.a:1 "La Proposition des [Root.GetBrahminsName]"
- estate_privileges_and_agendas_events.3.b:1 "La Proposition du [Root.GetClergyName]"
- estate_privileges_and_agendas_events.3.c:1 "La Proposition des [Root.GetMarathasName]"
- estate_privileges_and_agendas_events.3.d:1 "La Proposition de la [Root.GetNobilityName]"
- estate_privileges_and_agendas_events.3.e:1 "La Proposition des [Root.GetBurghersName]"
- estate_privileges_and_agendas_events.3.f:1 "La Proposition des [Root.GetVaishyasName]"
+ estate_privileges_and_agendas_events.3.a:1 "La Proposition des [Root.GetBrahmanes]"
+ estate_privileges_and_agendas_events.3.b:1 "La Proposition du clergé"
+ estate_privileges_and_agendas_events.3.c:1 "La Proposition des [Root.GetMarathes]"
+ estate_privileges_and_agendas_events.3.d:1 "La Proposition de la [Root.GetNobles]"
+ estate_privileges_and_agendas_events.3.e:1 "La Proposition des Bourgeois"
+ estate_privileges_and_agendas_events.3.f:1 "La Proposition des [Root.GetVaishyas]"
  estate_privileges_and_agendas_events.3.g:1 "La Proposition des Orachav"
- estate_privileges_and_agendas_events.3.h:1 "La Proposition des [Root.GetTribesName]"
- estate_privileges_and_agendas_events.3.i:1 "La Proposition des [Root.GetDhimmiName]"
- estate_privileges_and_agendas_events.3.j:1 "La Proposition des [Root.GetJainsName]"
- estate_privileges_and_agendas_events.3.k:1 "La Proposition des [Root.GetRajputsName]"
+ estate_privileges_and_agendas_events.3.h:1 "La Proposition des [Root.GetTribus]"
+ estate_privileges_and_agendas_events.3.i:1 "La Proposition des [Root.GetDhimmi]"
+ estate_privileges_and_agendas_events.3.j:1 "La Proposition des [Root.GetJains]"
+ estate_privileges_and_agendas_events.3.k:1 "La Proposition des [Root.GetRajpoutes]"
  estate_privileges_and_agendas_events.3.l:1 "La Proposition des [Root.GetJanissariesName]"
  estate_privileges_and_agendas_events.3.m:1 "La Proposition des [Root.GetEunuchsName]"
- estate_privileges_and_agendas_events.3.n: "La Proposition des [Root.GetQizilbashName]"
+ estate_privileges_and_agendas_events.3.n: "La Proposition des [Root.GetQizilbash]"
  estate_privileges_and_agendas_events.3.o:1 "La Proposition des [Root.GetGhilmanName]"
  estate_privileges_and_agendas_events.6.title:0 "Vente de Terres de la Couronne"
  estate_privileges_and_agendas_events.6.desc:0 "Le trésor de notre [Root.GovernmentName] est dans une situation difficile. Heureusement pour nous, nos états sont très intéressés à acheter certaines de nos terres. À qui devrions-nous vendre notre précieuse propriété ?"
@@ -1107,17 +1107,17 @@
  RAISEWARTAXESSTOPPED_2:0 "À cause de notre manque de Pouvoir Militaire suffisant, nous avons dû arrêter de collecter les taxes de guerre levées pour nos guerres."
  RAISEWARTAXESSTOPPED_LOG:0 "À cause de notre manque de Pouvoir Militaire suffisant, nous avons dû arrêter de collecter les taxes de guerre levées pour nos guerres."
  RAISEWARTAXESSTOPPED_BTN1:0 "OK"
- estate_church_ownership:0 "Propriété Foncière du [Country.GetClergyName]"
- estate_brahmins_ownership:0 "Propriété Foncière des [Country.GetBrahminsName]"
- estate_maratha_ownership:0 "Propriété Foncière des [Country.GetMarathasName]"
- estate_nobles_ownership:0 "Propriété Foncière de la [Country.GetNobilityName]"
- estate_burghers_ownership:0 "Propriété Foncière des [Country.GetBurghersName]"
- estate_vaisyas_ownership:0 "Propriété Foncière des [Country.GetVaishyasName]"
+ estate_church_ownership:0 "Propriété Foncière du [Country.GetClercs]"
+ estate_brahmins_ownership:0 "Propriété Foncière des [Country.GetBrahmanes]"
+ estate_maratha_ownership:0 "Propriété Foncière des [Country.GetMarathes]"
+ estate_nobles_ownership:0 "Propriété Foncière de la [Country.GetNobles]"
+ estate_burghers_ownership:0 "Propriété Foncière des [Country.GetBourgeois]"
+ estate_vaisyas_ownership:0 "Propriété Foncière des [Country.GetVaishyas]"
  estate_cossacks_ownership:0 "Propriété Foncière des Orachav"
- estate_nomadic_tribes_ownership:0 "Propriété Foncière des [Country.GetTribesName]"
- estate_dhimmi_ownership:0 "Propriété Foncière des [Country.GetDhimmiName]"
- estate_jains_ownership:0 "Propriété Foncière des [Country.GetJainsName]"
- estate_rajput_ownership:0 "Propriété Foncière des [Country.GetRajputsName]"
+ estate_nomadic_tribes_ownership:0 "Propriété Foncière des [Country.GetTribus]"
+ estate_dhimmi_ownership:0 "Propriété Foncière des [Country.GetDhimmi]"
+ estate_jains_ownership:0 "Propriété Foncière des [Country.GetJains]"
+ estate_rajput_ownership:0 "Propriété Foncière des [Country.GetRajpoutes]"
  ESTATE_OWNERSHIP_INFLUENCE:0 "Influence de l'$ESTATE$ : $VALUE|1Y&$\n"
  ESTATE_OWNERSHIP_MOD:0 "$MOD$"
  NO_PICKED_BULL:0 "Aucune Sélectionnée"
