--- a/3362815204/localisation/goblinic_shamanism_l_french.yml
+++ b/3362815204/localisation/goblinic_shamanism_l_french.yml
@@ -361,7 +361,7 @@
  goblinic_shamanism_flavor.417.a:0 "Du sang pour les runes de sang !"
  
  goblinic_shamanism_flavor.602.title:0 "Choisir un Culte Principal"
- goblinic_shamanism_flavor.602.desc:0 "Les [Root.GetClergyName] se sont rassemblés à la cour de [Root.GetName]. Ils ont exprimé des inquiétudes concernant le fait que trop de cultes tentent d'imposer leur influence dans notre [Root.GovernmentName] et recommandent de suivre une approche plus monothéiste en promouvant un culte principal. Un culte, qui est toujours suivi par le sage [Root.Monarch.GetTitle] de [Root.GetName]."
+ goblinic_shamanism_flavor.602.desc:0 "Les clergé se sont rassemblés à la cour de [Root.GetName]. Ils ont exprimé des inquiétudes concernant le fait que trop de cultes tentent d'imposer leur influence dans notre [Root.GovernmentName] et recommandent de suivre une approche plus monothéiste en promouvant un culte principal. Un culte, qui est toujours suivi par le sage [Root.Monarch.GetTitle] de [Root.GetName]."
  goblinic_shamanism_flavor.602.a:0 "Nous adopterons Kroozmuta Zemna comme culte principal !"
  goblinic_shamanism_flavor.602.b:0 "Nous adopterons Kroozbuto Nubo comme culte principal !"
  goblinic_shamanism_flavor.602.c:0 "Nous adopterons Tewaka Sunka comme culte principal !"
