--- a/3362815204/localisation/text_l_french.yml
+++ b/3362815204/localisation/text_l_french.yml
@@ -3110,7 +3110,7 @@
  hall_of_worthies:0 "Cabinet des lettrés"
  desc_hall_of_worthies:0 "Il s'agit de l'assemblée des érudits les plus éminents de la nation."
  sinmun_office:0 "Bureau Sinmun"
- desc_sinmun_office:0 "Ce bureau étudie le cas des sujets estimant avoir été lésés ou injustement traités par le pouvoir ou les [Root.GetNobles]."
+ desc_sinmun_office:0 "Ce bureau étudie le cas des sujets estimant avoir été lésés ou injustement traités par le pouvoir ou les Nobles."
  sinmun_office_rejected:0 "Bureau Sinmun refusé"
  desc_sinmun_office_rejected:0 "Nous avons refusé la demande populaire d'instaurer un bureau destiné à écouter les doléances."
  manchu_alphabet:0 "Alphabet mandchou"
